infrastructure/cdk.out/SpendlyStack.template.json
{
 "Resources": {
  "SpendlyVpcAA2F8862": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/Resource"
   }
  },
  "SpendlyVpcPublicSubnet1Subnet2F7967E4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet1/Subnet"
   }
  },
  "SpendlyVpcPublicSubnet1RouteTableE8051A8D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet1/RouteTable"
   }
  },
  "SpendlyVpcPublicSubnet1RouteTableAssociation0BCE5D71": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SpendlyVpcPublicSubnet1RouteTableE8051A8D"
    },
    "SubnetId": {
     "Ref": "SpendlyVpcPublicSubnet1Subnet2F7967E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "SpendlyVpcPublicSubnet1DefaultRouteAA5FE13B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SpendlyVpcIGWF3CACAD3"
    },
    "RouteTableId": {
     "Ref": "SpendlyVpcPublicSubnet1RouteTableE8051A8D"
    }
   },
   "DependsOn": [
    "SpendlyVpcVPCGWF89AFC48"
   ],
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "SpendlyVpcPublicSubnet1EIP5913246F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet1/EIP"
   }
  },
  "SpendlyVpcPublicSubnet1NATGateway15E270A7": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "SpendlyVpcPublicSubnet1EIP5913246F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "SpendlyVpcPublicSubnet1Subnet2F7967E4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "SpendlyVpcPublicSubnet1DefaultRouteAA5FE13B",
    "SpendlyVpcPublicSubnet1RouteTableAssociation0BCE5D71"
   ],
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet1/NATGateway"
   }
  },
  "SpendlyVpcPublicSubnet2SubnetF79DECBC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet2/Subnet"
   }
  },
  "SpendlyVpcPublicSubnet2RouteTable0548BDA7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet2/RouteTable"
   }
  },
  "SpendlyVpcPublicSubnet2RouteTableAssociation57EE2269": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SpendlyVpcPublicSubnet2RouteTable0548BDA7"
    },
    "SubnetId": {
     "Ref": "SpendlyVpcPublicSubnet2SubnetF79DECBC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "SpendlyVpcPublicSubnet2DefaultRouteBAF776C5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SpendlyVpcIGWF3CACAD3"
    },
    "RouteTableId": {
     "Ref": "SpendlyVpcPublicSubnet2RouteTable0548BDA7"
    }
   },
   "DependsOn": [
    "SpendlyVpcVPCGWF89AFC48"
   ],
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "SpendlyVpcPrivateSubnet1SubnetF34C9517": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PrivateSubnet1/Subnet"
   }
  },
  "SpendlyVpcPrivateSubnet1RouteTableF5D35CF6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PrivateSubnet1/RouteTable"
   }
  },
  "SpendlyVpcPrivateSubnet1RouteTableAssociation9A5595D9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SpendlyVpcPrivateSubnet1RouteTableF5D35CF6"
    },
    "SubnetId": {
     "Ref": "SpendlyVpcPrivateSubnet1SubnetF34C9517"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "SpendlyVpcPrivateSubnet1DefaultRoute3D2FBFD7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "SpendlyVpcPublicSubnet1NATGateway15E270A7"
    },
    "RouteTableId": {
     "Ref": "SpendlyVpcPrivateSubnet1RouteTableF5D35CF6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "SpendlyVpcPrivateSubnet2Subnet8C4D6774": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PrivateSubnet2/Subnet"
   }
  },
  "SpendlyVpcPrivateSubnet2RouteTable3DBA9A25": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PrivateSubnet2/RouteTable"
   }
  },
  "SpendlyVpcPrivateSubnet2RouteTableAssociation7636A2EC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SpendlyVpcPrivateSubnet2RouteTable3DBA9A25"
    },
    "SubnetId": {
     "Ref": "SpendlyVpcPrivateSubnet2Subnet8C4D6774"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "SpendlyVpcPrivateSubnet2DefaultRoute128FB6DA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "SpendlyVpcPublicSubnet1NATGateway15E270A7"
    },
    "RouteTableId": {
     "Ref": "SpendlyVpcPrivateSubnet2RouteTable3DBA9A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "SpendlyVpcIGWF3CACAD3": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpendlyStack/SpendlyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/IGW"
   }
  },
  "SpendlyVpcVPCGWF89AFC48": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "SpendlyVpcIGWF3CACAD3"
    },
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyVpc/VPCGW"
   }
  },
  "SpendlySecrets32749308": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": "Spendly application secrets",
    "GenerateSecretString": {
     "GenerateStringKey": "SESSION_SECRET",
     "SecretStringTemplate": "{\"DATABASE_URL\":\"\",\"SESSION_SECRET\":\"\",\"STRIPE_SECRET_KEY\":\"\",\"STRIPE_WEBHOOK_SECRET\":\"\",\"PAYSTACK_SECRET_KEY\":\"\",\"COGNITO_USER_POOL_ID\":\"\",\"COGNITO_CLIENT_ID\":\"\"}"
    },
    "Name": "spendly/app-secrets"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlySecrets/Resource"
   }
  },
  "DbSecurityGroupE9D701AD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Spendly RDS",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/DbSecurityGroup/Resource"
   }
  },
  "DbSecurityGroupfromSpendlyStackServiceSecurityGroupC6E7F6D5543214799765": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow from ECS",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DbSecurityGroupE9D701AD",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ServiceSecurityGroup61DE1A49",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/DbSecurityGroup/from SpendlyStackServiceSecurityGroupC6E7F6D5:5432"
   }
  },
  "SpendlyDbSubnetGroup30B9BE15": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for SpendlyDb database",
    "SubnetIds": [
     {
      "Ref": "SpendlyVpcPrivateSubnet1SubnetF34C9517"
     },
     {
      "Ref": "SpendlyVpcPrivateSubnet2Subnet8C4D6774"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyDb/SubnetGroup/Default"
   }
  },
  "SpendlyStackSpendlyDbSecretE92A79D43fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"spendly_admin\"}"
    },
    "Name": "spendly/db-credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyDb/Secret/Resource"
   }
  },
  "SpendlyDbSecretAttachmentC18EF2DB": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "SpendlyStackSpendlyDbSecretE92A79D43fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "SpendlyDb2DBAC283"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyDb/Secret/Attachment/Resource"
   }
  },
  "SpendlyDb2DBAC283": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "BackupRetentionPeriod": 7,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "spendly",
    "DBSubnetGroupName": {
     "Ref": "SpendlyDbSubnetGroup30B9BE15"
    },
    "DeletionProtection": true,
    "Engine": "postgres",
    "EngineVersion": "16.4",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "SpendlyStackSpendlyDbSecretE92A79D43fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "spendly_admin",
    "MaxAllocatedStorage": 100,
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageEncrypted": true,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "DbSecurityGroupE9D701AD",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyDb/Resource"
   }
  },
  "SpendlyRepo7631E463": {
   "Type": "AWS::ECR::Repository",
   "Properties": {
    "LifecyclePolicy": {
     "LifecyclePolicyText": "{\"rules\":[{\"rulePriority\":1,\"description\":\"Keep last 10 images\",\"selection\":{\"tagStatus\":\"any\",\"countType\":\"imageCountMoreThan\",\"countNumber\":10},\"action\":{\"type\":\"expire\"}}]}"
    },
    "RepositoryName": "spendly"
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyRepo/Resource"
   }
  },
  "SpendlyClusterFEF95140": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "spendly",
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enabled"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyCluster/Resource"
   }
  },
  "SpendlyTaskRole81FA43D9": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Description": "Spendly ECS task role"
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyTaskRole/Resource"
   }
  },
  "SpendlyTaskRoleDefaultPolicyD4BC9DB9": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ses:SendEmail",
        "ses:SendRawEmail"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": "sns:Publish",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "SpendlySecrets32749308"
       }
      },
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "SpendlyDbSecretAttachmentC18EF2DB"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "SpendlyTaskRoleDefaultPolicyD4BC9DB9",
    "Roles": [
     {
      "Ref": "SpendlyTaskRole81FA43D9"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyTaskRole/DefaultPolicy/Resource"
   }
  },
  "SpendlyTaskBA995AE1": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "NODE_ENV",
        "Value": "production"
       },
       {
        "Name": "PORT",
        "Value": "5000"
       },
       {
        "Name": "APP_URL",
        "Value": "https://app.spendlymanager.com"
       },
       {
        "Name": "AWS_REGION",
        "Value": "us-east-1"
       },
       {
        "Name": "AWS_SES_FROM_EMAIL",
        "Value": "noreply@spendlymanager.com"
       },
       {
        "Name": "AWS_SES_FROM_NAME",
        "Value": "Spendly"
       },
       {
        "Name": "AWS_SNS_SENDER_ID",
        "Value": "Spendly"
       }
      ],
      "Essential": true,
      "HealthCheck": {
       "Command": [
        "CMD-SHELL",
        "wget -qO- http://localhost:5000/api/health || exit 1"
       ],
       "Interval": 30,
       "Retries": 3,
       "StartPeriod": 30,
       "Timeout": 5
      },
      "Image": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           4,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "SpendlyRepo7631E463",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".dkr.ecr.",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "SpendlyRepo7631E463",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/",
         {
          "Ref": "SpendlyRepo7631E463"
         },
         ":latest"
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "SpendlyLogsC9368AC9"
        },
        "awslogs-stream-prefix": "spendly",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "spendly",
      "PortMappings": [
       {
        "ContainerPort": 5000,
        "Protocol": "tcp"
       }
      ],
      "Secrets": [
       {
        "Name": "DATABASE_URL",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SpendlySecrets32749308"
           },
           ":DATABASE_URL::"
          ]
         ]
        }
       },
       {
        "Name": "SESSION_SECRET",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SpendlySecrets32749308"
           },
           ":SESSION_SECRET::"
          ]
         ]
        }
       },
       {
        "Name": "STRIPE_SECRET_KEY",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SpendlySecrets32749308"
           },
           ":STRIPE_SECRET_KEY::"
          ]
         ]
        }
       },
       {
        "Name": "STRIPE_WEBHOOK_SECRET",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SpendlySecrets32749308"
           },
           ":STRIPE_WEBHOOK_SECRET::"
          ]
         ]
        }
       },
       {
        "Name": "PAYSTACK_SECRET_KEY",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SpendlySecrets32749308"
           },
           ":PAYSTACK_SECRET_KEY::"
          ]
         ]
        }
       },
       {
        "Name": "COGNITO_USER_POOL_ID",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SpendlySecrets32749308"
           },
           ":COGNITO_USER_POOL_ID::"
          ]
         ]
        }
       },
       {
        "Name": "COGNITO_CLIENT_ID",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SpendlySecrets32749308"
           },
           ":COGNITO_CLIENT_ID::"
          ]
         ]
        }
       }
      ]
     }
    ],
    "Cpu": "512",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "SpendlyTaskExecutionRoleB6DD6283",
      "Arn"
     ]
    },
    "Family": "SpendlyStackSpendlyTask29C72C2E",
    "Memory": "1024",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "SpendlyTaskRole81FA43D9",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyTask/Resource"
   }
  },
  "SpendlyTaskExecutionRoleB6DD6283": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyTask/ExecutionRole/Resource"
   }
  },
  "SpendlyTaskExecutionRoleDefaultPolicy61EEBFC4": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "SpendlyRepo7631E463",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "SpendlyLogsC9368AC9",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "SpendlySecrets32749308"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "SpendlyTaskExecutionRoleDefaultPolicy61EEBFC4",
    "Roles": [
     {
      "Ref": "SpendlyTaskExecutionRoleB6DD6283"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyTask/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "SpendlyLogsC9368AC9": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/spendly",
    "RetentionInDays": 30
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyLogs/Resource"
   }
  },
  "AlbSecurityGroup86A59E99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Spendly ALB",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTPS",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/AlbSecurityGroup/Resource"
   }
  },
  "SpendlyAlb7E0A90D4": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "AlbSecurityGroup86A59E99",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "SpendlyVpcPublicSubnet1Subnet2F7967E4"
     },
     {
      "Ref": "SpendlyVpcPublicSubnet2SubnetF79DECBC"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "SpendlyVpcPublicSubnet1DefaultRouteAA5FE13B",
    "SpendlyVpcPublicSubnet1RouteTableAssociation0BCE5D71",
    "SpendlyVpcPublicSubnet2DefaultRouteBAF776C5",
    "SpendlyVpcPublicSubnet2RouteTableAssociation57EE2269"
   ],
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyAlb/Resource"
   }
  },
  "SpendlyAlbHttpListener2FE6E419": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "SpendlyTargetGroup19DCE39A"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "SpendlyAlb7E0A90D4"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyAlb/HttpListener/Resource"
   }
  },
  "ServiceSecurityGroup61DE1A49": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Spendly ECS service",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/ServiceSecurityGroup/Resource"
   }
  },
  "ServiceSecurityGroupfromSpendlyStackAlbSecurityGroup815586E15000BCE4060B": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow from ALB",
    "FromPort": 5000,
    "GroupId": {
     "Fn::GetAtt": [
      "ServiceSecurityGroup61DE1A49",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 5000
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/ServiceSecurityGroup/from SpendlyStackAlbSecurityGroup815586E1:5000"
   }
  },
  "SpendlyService958E8A1F": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "SpendlyClusterFEF95140"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "DeploymentCircuitBreaker": {
      "Enable": true,
      "Rollback": true
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DeploymentController": {
     "Type": "ECS"
    },
    "DesiredCount": 0,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "spendly",
      "ContainerPort": 5000,
      "TargetGroupArn": {
       "Ref": "SpendlyTargetGroup19DCE39A"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ServiceSecurityGroup61DE1A49",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "SpendlyVpcPrivateSubnet1SubnetF34C9517"
       },
       {
        "Ref": "SpendlyVpcPrivateSubnet2Subnet8C4D6774"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "SpendlyTaskBA995AE1"
    }
   },
   "DependsOn": [
    "SpendlyAlbHttpListener2FE6E419",
    "SpendlyTaskRoleDefaultPolicyD4BC9DB9",
    "SpendlyTaskRole81FA43D9"
   ],
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyService/Service"
   }
  },
  "SpendlyServiceTaskCountTarget7CB88B71": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 4,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "SpendlyClusterFEF95140"
       },
       "/",
       {
        "Fn::GetAtt": [
         "SpendlyService958E8A1F",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":iam::677343720858:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService"
      ]
     ]
    },
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "DependsOn": [
    "SpendlyTaskRoleDefaultPolicyD4BC9DB9",
    "SpendlyTaskRole81FA43D9"
   ],
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyService/TaskCount/Target/Resource"
   }
  },
  "SpendlyServiceTaskCountTargetCpuScalingE20FB2E4": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "SpendlyStackSpendlyServiceTaskCountTargetCpuScaling6E8788B6",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "SpendlyServiceTaskCountTarget7CB88B71"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
     },
     "ScaleInCooldown": 300,
     "ScaleOutCooldown": 60,
     "TargetValue": 70
    }
   },
   "DependsOn": [
    "SpendlyTaskRoleDefaultPolicyD4BC9DB9",
    "SpendlyTaskRole81FA43D9"
   ],
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyService/TaskCount/Target/CpuScaling/Resource"
   }
  },
  "SpendlyTargetGroup19DCE39A": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 30,
    "HealthCheckPath": "/api/health",
    "HealthCheckTimeoutSeconds": 5,
    "HealthyThresholdCount": 2,
    "Port": 5000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "deregistration_delay.timeout_seconds",
      "Value": "30"
     },
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "UnhealthyThresholdCount": 3,
    "VpcId": {
     "Ref": "SpendlyVpcAA2F8862"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/SpendlyTargetGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31T227bMAz9lr0rXhF0H5DLVgQoNiMO+jrQCuupcSRDpFIUhv99lOVb+tAnHh6S0iEprbP140P28A3eaaXPl1VtyqwtGPRFCfW3Rb3O2pdGq92rfcl3Kg9lbXQRSoscuRkdXWA8QVnjzM/chshpA2ycnZIj+HnIo/kN/ASM7/Chcm9uAueDD5bRCx4TkpLB27Bo/XdFy6pAHbzhjyfvQtNr+JI42MojUacItUemK1io0Ev3vT/kR5TMCXyFvLhvSvgc6ZQ/U9bugaEEwoMlBqtRpZYmNfvtkhiz59v327GyU0Jm7REbR4ad72cwezEs9+3qQDKpGBvhL1EGcQN02eOrsWac/2fGWQZj0S+4obZAfzM67XSAhYY67jQesnMhNmzgKvpc2n1vcyfvpBeaUKdqV4nKZ1dNExixNFADsdG1g3Mph1ttbHWTl7dpGinun82zxLZ9L [...]
   },
   "Metadata": {
    "aws:cdk:path": "SpendlyStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "AlbDnsName": {
   "Description": "ALB DNS name",
   "Value": {
    "Fn::GetAtt": [
     "SpendlyAlb7E0A90D4",
     "DNSName"
    ]
   }
  },
  "EcrRepositoryUri": {
   "Description": "ECR repository URI",
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Fn::Select": [
        4,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "SpendlyRepo7631E463",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".dkr.ecr.",
      {
       "Fn::Select": [
        3,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "SpendlyRepo7631E463",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "SpendlyRepo7631E463"
      }
     ]
    ]
   }
  },
  "ClusterName": {
   "Description": "ECS cluster name",
   "Value": {
    "Ref": "SpendlyClusterFEF95140"
   }
  },
  "ServiceName": {
   "Description": "ECS service name",
   "Value": {
    "Fn::GetAtt": [
     "SpendlyService958E8A1F",
     "Name"
    ]
   }
  },
  "DatabaseEndpoint": {
   "Description": "RDS endpoint",
   "Value": {
    "Fn::GetAtt": [
     "SpendlyDb2DBAC283",
     "Endpoint.Address"
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
